# suitable-django-autocomplete

./: .gitignore  CHANGELOG.md  CHANGELOG_IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  RELEASE_NOTES_0.6.0.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: model_value_label_example.md
src/suitable_django_autocomplete/: README.md  __init__.py  examples.py  fields.py  views.py  widgets.py
src/suitable_django_autocomplete/static/suitable_django_autocomplete/: autocomplete.js
src/suitable_django_autocomplete/templates/suitable_django_autocomplete/: autocomplete.html
tests/: test_auto_initial_display_value.py  test_realistic_auto_display.py  test_settings.py  test_value_label_pattern.py
tests/fixtures/: test_safari_fix.html  test_safari_form_submission.html  test_styling.html
