[project]
name = "suitable-django-autocomplete"
version = "0.1.0"
description = "Modern Django autocomplete widget"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitable_django_autocomplete"]
