[project]
name = "suitable-django-autocomplete"
version = "0.5.2"
description = "A suitable Django autocomplete widget using web components"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Johan Valentini Jensen", email = "johan@valentini.dk"},
]
keywords = ["django", "autocomplete", "widget", "web-components", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/suitable-adventures/suitable-django-autocomplete"
Repository = "https://github.com/suitable-adventures/suitable-django-autocomplete"
Documentation = "https://github.com/suitable-adventures/suitable-django-autocomplete#readme"
"Bug Tracker" = "https://github.com/suitable-adventures/suitable-django-autocomplete/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitable_django_autocomplete"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests/test_*.py"]
addopts = "--tb=short"
